2003-07-17  Richard Hult  <richard@imendio.com>

	* typing-break/main.c (main): Remove session stuff since g-s-d
	handles lifetime the cycle now.

2003-07-11  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>

	* configure.in: Added "cy" (Welsh) to ALL_LINGUAS

2003-07-07  Jody Goldberg <jody@gnome.org>

	* configure.in : post release version bump

2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-07-02  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=116568
	* gnome-settings-daemon/gnome-settings-xsettings.c
	(gnome_xft_settings_set_xresources) : generate values in locale C

2003-06-27  Richard Hult  <richard@imendio.com>

	* typing-break/drw-intl.h: Remove this and use gnome-i18n.h
	instead.

	* typing-break/Makefile.am: Remove drw-intl.h
	
	* typing-break/drwright.c:
	* typing-break/drwright.h:
	* typing-break/drw-break-window.c: Merge in changes from drwright.

Thu Jun 26 16:37:50 2003  Jonathan Blandford  <jrb@redhat.com>

	* Makefile.am (SUBDIRS): add typing-break to subdirs.

Thu Jun 26 07:38:45 2003  Jonathan Blandford  <jrb@gnome.org>

	* typing-break/drwright.c: added the typing break to CVS from
	drwright.

2003-06-24  Jody Goldberg <jody@gnome.org>

	* configure.in : post release version bump

2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

2003-06-15  Taneem Ahmed  <taneem@eyetap.org>

	* configure.in: Added "bn" to ALL_LINGUAS.

2003-06-03  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* .cvsignore:
	* capplets/common/.cvsignore:
	* schemas/.cvsignore:
	* vfs-methods/.cvsignore: Quiet cvs.

	* capplets/common/Makefile.am: fix parallel build.

	* capplets/common/gnome-theme-apply.c: add missing header.

2003-05-23  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added "id" "th" to ALL_LINGUAS.

Tue May 20 19:14:19 2003  Jonathan Blandford  <jrb@redhat.com>

	* configure.in: 2.3.2 released.

Tue May 20 12:43:59 2003  Jonathan Blandford  <jrb@redhat.com>
