@@ -1,3 +1,7 @@
+2003-07-24  Andrew Sobala  <aes@gnome.org>
+
+	* POTFILES.in: added vfs-methods/themus/apply-font.glade
+
 2003-07-23  Andrew Sobala <aes@gnome.org>
 
 	* POTFILES.in: s/themus-component.c/themus-theme-applier.c/
