@@ -1,3 +1,8 @@
+2003-07-24  Andrew Sobala  <aes@gnome.org>
+
+	* Makefile.am, apply-font.glade, themus-theme-applier.c:
+	added GUI to ask if a font should be applied
+
 2003-07-21  Andrew Sobala  <aes@gnome.org>
 
 	As per comments on Usability@gnome.org:
