@@ -1,3 +1,7 @@
+2003-07-24  Andrew Sobala  <aes@gnome.org>
+
+	* Added libglade to themus configure check
+
 2003-07-17  Richard Hult  <richard@imendio.com>
 
 	* typing-break/main.c (main): Remove session stuff since g-s-d
